Убрал все лишнее, оставил только абстрактный нейминг и тестовый пример работы
