# internal/http/dto/example_dto.go
@@ -1,0 +1,9 @@
+package dto
+
+type ExampleRequest struct {
+	Data string `json:"data"`
+}
+
+type ExampleResponse struct {
+	Data string `json:"data"`
+}
