# internal/usecase/userusc/delete/handler.go
@@ -1,30 +1,0 @@
-package delete
-
-import (
-	domainUser "BaseProjectGolang/internal/domain/userdmn"
-	"context"
-)
-
-type Handler struct {
-	userRepository domainUser.IUserRepository
-}
-
-func NewHandler(
-	userRepository domainUser.IUserRepository,
-) *Handler {
-	return &Handler{
-		userRepository: userRepository,
-	}
-}
-
-func (h *Handler) Execute(
-	ctx context.Context,
-	cmd *Command,
-) error {
-
-	return h.userRepository.Delete(
-		ctx,
-		cmd.Username,
-		cmd.Force,
-	)
-}
